styles.css
/* ... */
.btn:hover {
    opacity: .8;
}

.showcase h2,
.showcase p {
    margin-bottom: 10px;
}

/* NEWS CARDS */
.news-card {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    margin: 10px 0;
}

.news-card img {
    width: 100%;
    height: 300px;
    border-radius: 3%;
}

.news-card h3 {
    margin: 10px 0;
    text-align: center;
}

.news-card p {
    font-size: 14px;
    text-align: center;
}

.news-card a{
    padding: 10px 0;
    color: #e49825;
    text-transform: uppercase;
    display: inline-block;
    font-weight: bold;
}

.news-card a:hover {
    text-decoration: underline;
}


/* CONTENIDO */


/* SOCIAL */
.social {
    margin: 50px;
}

.social p {
    text-align: center;
    font-size: 30px;
    margin-bottom: 20px;
}

.links {
    display: flex;
    align-items: center;
    justify-content: center;
    
}

.links a {
    margin: 0 30px;
}

.links a i {
    font-size: 3rem;
}



/* FOOTER */
.footer-text {
    background: #2f3640;
    color: #e49825;
    font-size: 12px;
    padding: 10px;

}

.footer-container {
    margin: 20px;
    text-align: center;
    line-height: 2;
}

.footer {
    color: rgb(196, 196, 196);
    font-size: 3px;
    padding: 20px 0;
    text-align: center;
    padding-bottom: 20px;
}

.cards {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    margin: 10px 0;
}

.cards img {
    width: 100%;
    height: 300px;
    border-radius: 3%;
}

.cards h3 {
    margin: 10px 0;
    text-align: center;
}

.cards p {
    font-size: 14px;
    text-align: center;
    
}

.close {
    padding-left: 50px;
}

/*revista*/

.containep {
    margin-top: 40px;
    align-items: center;
    justify-content: center;
}

 .col-sm-12 img {
     padding: 70px;
 }

.carousel img {
    align-items: center;
}





@media (max-width: 700px) {

    .nav-main ul.nav-menu {
        display: block;
        position: absolute;
        top: 0;
        left: 0;
        background-color: #2f3640;
        height: 100%;
        padding: 30px;
        opacity: .9;
        transform: translateX(-400px);
        transition: transform .5s ease-in-out;
    }

    .nav-main ul.nav-menu.show {
        transform: translateX(-20px);
    }

    .nav-main ul.nav-menu li {
        padding: 20px;
        font-size: 14px;
    }

    .nav-main ul.nav-menu-right {
        margin-right: 40px;
    }

    .news-card {
        grid-template-columns: 1fr;
    }
.showcase .mx-5 
{
    width: 80%;
}
}


.nav-link {
    color: #ffffff !important;
    text-transform: uppercase;
}

.nav-item {
    margin-right: 80px !important;
}

/* CONTIANER REVISTA */


.contain img {
    
    width: 100%;
    height: auto;
    margin-bottom: 40px;
}

.left-cards img { border: 1px solid #ddd;
    border-radius: 4px;
    padding: 5px;
    width: 400px;
    margin-top: 30px;
    margin-left: 23%;

  }
  

/*EFECTO HOVER */

Zoom In #1 /
.zoom-in-image  {
    -webkit-transform: scale(1);
    transform: scale(1);
    -webkit-transition: .3s ease-in-out;
    transition: .3s ease-in-out;
}
.zoom-in-image:hover {
    -webkit-transform: scale(1.3);
    transform: scale(1.3);
}
/efectos de img hover/
.img-zoom-in 
{
transition:all .2s ease-in-out;
-webkit-transition:all .2s ease-in-out;
-moz-transition:all .2s ease-in-out;
-ms-transition:all .2s ease-in-out;
-o-transition:all .2s ease-in-out;
}

.img-zoom-in:hover 
{
transform:scale(1.2);
-webkit-transform:scale(1.2);
-moz-transform:scale(1.2);
-ms-transform:scale(1.2);
-o-transform:scale(1.2)
}
/efectos de img hover/
.img-zoom-out
{
transition:all .2s ease-in-out;
-webkit-transition:all .2s ease-in-out;
-moz-transition:all .2s ease-in-out;
-ms-transition:all .2s ease-in-out;
-o-transition:all .2s ease-in-out;
}

.img-zoom-out:hover
{
transform:scale(0.9);
-webkit-transform:scale(0.9);
-moz-transform:scale(0.9);
-ms-transform:scale(0.9);
-o-transform:scale(0.9)
}
/ effect rotate-y /

.img-rotate-y
{
transition:all 1.2s ease-in-out;
-webkit-transition:all 1.2s ease-in-out;
-moz-transition:all 1.2s ease-in-out;
-ms-transition:all 1.2s ease-in-out;
-o-transition:all 1.2s ease-in-out;
}

.img-rotate-y:hover
{
transform:rotateY(180deg);
-webkit-transform:rotateY(180deg);
-moz-transform:rotateY(180deg);
-ms-transform:rotateY(180deg);
-o-transform:rotateY(180deg);
}

/ effect rotate-scale ***/

.img-rotate-scale
{
transition:all 1.2s ease-in-out;
-webkit-transition:all 1.2s ease-in-out;
-moz-transition:all 1.2s ease-in-out;
-ms-transition:all 1.2s ease-in-out;
-o-transition:all 1.2s ease-in-out;
}

.img-rotate-scale:hover
{
transform:rotate(720deg) scale(2,2);
-webkit-transform:rotate(720deg) scale(2,2);
-moz-transform:rotate(720deg) scale(2,2);
-ms-transform:rotate(720deg) scale(2,2);
-o-transform:rotate(720deg) scale(2,2);
}

